# pytorch3d-gouraud-failure

./: README.md  pyproject.toml  requirements.txt  test.py
